[package]
name = "libc"
version = "0.2.94"
authors = ["The Rust Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/libc"
homepage = "https://github.com/rust-lang/libc"
documentation = "https://docs.rs/libc/"
keywords = ["libc", "ffi", "bindings", "operating", "system" ]
categories = ["external-ffi-bindings", "no-std", "os"]
build = "build.rs"
exclude = ["/ci/*", "/.github/*", "/.cirrus.yml", "/triagebot.toml"]
description = """
Raw FFI bindings to platform libraries like libc.
"""

[dependencies]
rustc-std-workspace-core = { version = "1.0.0", optional = true }

[patch.crates-io]
cc = { git = "http://gitlab.gen.cn/community/rust-cc", branch = "dev-1.0.66" }
libc = { git = "http://gitlab.gen.cn/community/rust-libc", branch = "b0.2.82" }
ctest = { git = "http://gitlab.gen.cn/community/rust-ctest", branch = "dev-master" }

[features]
default = ["std"]
std = []
align = []
rustc-dep-of-std = ['align', 'rustc-std-workspace-core']
extra_traits = []
const-extern-fn = []
# use_std is deprecated, use `std` instead
use_std = [ 'std' ]

[workspace]
members = ["libc-test"]
